--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -425,7 +425,7 @@ section {
 .navbar-mobile a:hover,
 .navbar-mobile .active,
 .navbar-mobile li:hover>a {
-  color: #4154f1;
+  color: white;
 }
 
 .navbar-mobile .getstarted,
@@ -473,7 +473,7 @@ section {
 .hero {
   width: 100%;
   height: 100vh;
-  background: url(../img/hero-bg.png) top center no-repeat;
+  background:linear-gradient(rgba(255, 255, 255, 0.75),rgba(255, 255, 255, 0.75)), url(../img/bg-landascape.jpg) top center no-repeat;
   background-size: cover;
 }
 
